bpo-32568: make select.epoll() and its docs consistent

* 'flags' is indeed deprecated, but there was a validation on its value,
  contrary to the docs saying it is "completely ignored".  This removes
  that check.
* 'sizehint' is still used when 'epoll_create1()' is unavailable, so
  this adds mention of this in the docs.
* Make 'sizehint' accept -1 again, which is replaced with FD_SETSIZE-1.
  This is needed to have a default value available at the Python level
  allowing to set this, since FD_SETSIZE is not exposed to Python.
  (see: bpo-31938)