Modules/selectmodule.c
@@ -1297,23 +1297,19 @@ newPyEpoll_Object(PyTypeObject *type, int sizehint, SOCKET fd)
 static PyObject *
 pyepoll_new(PyTypeObject *type, PyObject *args, PyObject *kwds)
 {
-    int flags = 0, sizehint = FD_SETSIZE - 1;
+    int flags = 0, sizehint = -1;
     static char *kwlist[] = {"sizehint", "flags", NULL};
 
     if (!PyArg_ParseTupleAndKeywords(args, kwds, "|ii:epoll", kwlist,
                                      &sizehint, &flags))
         return NULL;
-    if (sizehint < 0) {
-        PyErr_SetString(PyExc_ValueError, "negative sizehint");
+    if (sizehint == -1) {
+        sizehint = FD_SETSIZE - 1;
+    }
+    else if (sizehint < -1) {
+        PyErr_SetString(PyExc_ValueError, "sizehint must be positive, 0 or -1");
         return NULL;
     }
-
-#ifdef HAVE_EPOLL_CREATE1
-    if (flags && flags != EPOLL_CLOEXEC) {
-        PyErr_SetString(PyExc_OSError, "invalid flags");
-        return NULL;
-    }
-#endif
 
     return newPyEpoll_Object(type, sizehint, -1);
 }
